# elrecetario

./: .gitmodules  README.md  pelicanconf.py  publishconf.py  pyproject.toml
content/: mayonesa-vegana.md  parmesano-vegano.md
content/masas/: churrascas.md  pan-hamburguesas.md
content/pages/: about.md
output/: archives.html  authors.html  categories.html  churrascas.html  commodo-duis-ut-nisi-amet-sunt-fugiat-culpa-veniam-laborum-quis.html  deserunt-do-officia-veniam-dolore-fugiat-lorem-ad-incididunt-eiusmod-sunt-ut.html  index.html  laboris-ullamco-aliquip-veniam-irure-reprehenderit-qui.html  pan-para-hamburguesas.html  placeholder.html  reprehenderit-aute-esse-qui-ipsum-deserunt-officia.html  tags.html  ullamco-cillum-et-minim-in-amet.html
output/author/: guille.html  ignacio-mackenney.html
output/category/: filler.html  masas.html  mases.html  misc.html
